Changed Player to auto-collapse nabvar on play/pause/stop. #53 Added ability to edit project/album/tab from Dashboard #50

--- a/TabRepository/wwwroot/css/site.css
+++ b/TabRepository/wwwroot/css/site.css
@@ -64,8 +64,9 @@ body {
     display: flex;
 }
 
-.navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse {
-    overflow-y: scroll;
+.navbar-collapse {
+    overflow-y: scroll !important;
+    overflow-x: hidden !important;
 }
 
 .search-results {
